--- a/src/assets/loginregister.scss
+++ b/src/assets/loginregister.scss
@@ -1,33 +1,21 @@
 .login {
-  // background-color: #39ace7;
   font-family: "Poppins", sans-serif;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   .wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    min-height: 100%;
-    // padding: 0.4rem;
+    height: 100%;
     #formContent {
-      -webkit-border-radius: 0.2rem 0.2rem 0.2rem 0.2rem;
-      border-radius: 0.2rem 0.2rem 0.2rem 0.2rem;
+      height: 100%;
       background: #fff;
-      padding: 0.6rem;
-      width: 80%;
-      max-width: 5rem;
+      width: 100%;
       position: relative;
       padding: 0;
-      -webkit-box-shadow: 0 0.6rem 1.2rem 0 rgba(0, 0, 0, 0.3);
-      box-shadow: 0 0.6rem 1.2rem 0 rgba(0, 0, 0, 0.3);
       text-align: center;
-
       h2 {
         text-align: center;
-        font-size: 0.26rem;
         font-weight: 600;
+        font-size: .36rem;
         text-transform: uppercase;
         display: inline-block;
         margin: 0.4rem 0.08rem 0.1rem;
@@ -37,23 +25,8 @@
       .active {
         color: #39ace7;
       }
-      // .underlineHover:after {
-      //   display: block;
-      //   left: 0;
-      //   bottom: -0.1rem;
-      //   width: 0;
-      //   height: 0.02rem;
-      //   background-color: #39ace7;
-      //   content: "";
-      //   transition: width 0.2s;
-      // }
-      // // .underlineHover:hover {
-      // //     color: #0d0d0d;
-      // // }
-      // .underlineHover:hover:after {
-      //   width: 100%;
-      // }
       form {
+        padding-top: 0.4rem;
         input[type=button],
         input[type=reset],
         input[type=submit] {
@@ -65,12 +38,11 @@
           text-decoration: none;
           display: inline-block;
           text-transform: uppercase;
-          font-size: 0.13rem;
+          font-size: .26rem;
           -webkit-box-shadow: 0 0.1rem 0.3rem 0 rgba(95, 186, 233, 0.4);
           box-shadow: 0 0.1rem 0.3rem 0 rgba(95, 186, 233, 0.4);
           -webkit-border-radius: 0.05rem 0.05rem 0.05rem 0.05rem;
           border-radius: 0.05rem 0.05rem 0.05rem 0.05rem;
-          margin: 0.05rem 0.2rem 0.4rem;
           -webkit-transition: all 0.3s ease-in-out;
           -moz-transition: all 0.3s ease-in-out;
           -ms-transition: all 0.3s ease-in-out;
@@ -82,6 +54,7 @@
         input[type=reset]:hover,
         input[type=submit]:hover {
           background-color: #39ace7;
+          font-size: .26rem;
         }
 
         input[type=button]:active,
@@ -93,19 +66,24 @@
           -ms-transform: scale(0.95);
           transform: scale(0.95);
         }
-
+        input[type=radio]{
+          margin-left: 0.1rem;
+        }
+        label{
+          font-size: .26rem;
+          margin: 0 0.1rem;
+        }
         input[type=password],
         input[type=text] {
           background-color: #f6f6f6;
           border: none;
           color: #0d0d0d;
-          padding: 0.15rem 0.32rem;
+          padding: 0.09rem 0.32rem;
           text-align: center;
           text-decoration: none;
           display: inline-block;
-          font-size: 0.16rem;
-          margin: 0.05rem;
           width: 85%;
+          font-size: .3rem;
           border: 0.02rem solid #f6f6f6;
           -webkit-transition: all 0.5s ease-in-out;
           -moz-transition: all 0.5s ease-in-out;
@@ -125,11 +103,9 @@
           background-color: #fff;
           border-bottom: 0.02rem solid #5fbae9;
         }
-
         input[type=text]:placeholder {
           color: #cccccc;
         }
-
         input[type=password]:placeholder {
           color: #cccccc;
         }
